# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,8 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
 import usersRouter from "./users";
+import levelsRouter from "./levels";
+import branchesRouter from "./branches";
 import subjectsRouter from "./subjects";
 import lessonsRouter from "./lessons";
 import dashboardRouter from "./dashboard";
@@ -15,6 +17,8 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(authRouter);
 router.use(usersRouter);
+router.use(levelsRouter);
+router.use(branchesRouter);
 router.use(subjectsRouter);
 router.use(lessonsRouter);
 router.use(dashboardRouter);
